Add functions GTN_EarthModuleMagicGenerator